Add debugging of travis upload

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ script:
   - cd tmp_for_test
   - python -m tornado.test.runtests
   - cd ..
+  - echo $PWD
+  - ls tornado/dist
 before_deploy: cd tornado/dist
 deploy:
   provider: cloudfiles
