--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://github.com/facebook/tornado.git
 [submodule "terryfy"]
 	path = terryfy
-	url = git://github.com/matthew-brett/terryfy.git
+	url = git://github.com/MacPython/terryfy.git
